--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,40 @@ services:
   web:
     build: .
     ports:
-      - "5000:5000"
+      - "5000:80"
+    # volumes:
+    #  - .:/app
+    depends_on:
+      - db
+    develop:
+      watch:
+        - action: sync
+          path: ./
+          target: /app
+          ignore:
+            - __pycache__/
+            - .git/
+            - migrations/versions/
+            - .env
+        - action: rebuild
+          path: requirements.txt
+        - action: rebuild
+          path: Dockerfile
+    env_file:
+      - ./.env
+  db:
+    image: postgres:15
+    environment:
+      - POSTGRES_PASSWORD=password 
+      - POSTGRES_DB=myapp
+      - POSTGRES_USER=postgres
     volumes:
-      - .:/app
+      - postgres_data:/var/lib/postgresql/data 
+      # - ./data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    
+    restart: unless-stopped
+
+volumes:
+  postgres_data:
