TEST DEPLOY: Testing Supabase integration and Render deployment. This is an experimental build to verify if cloud database connection works in production environment.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://postgres:password@db:5432/myapp
+DATABASE_URL=https://vzyjmjzthpwrnfdokpfa.supabase.co
 SECRET_KEY=your-secret-key-here
 JWT_SECRET_KEY=your-jwt-secret-key-here
 FLASK_ENV=development
