Docker Update: fixed migrations with init_db

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,2 @@
-DATABASE_URL=https://vzyjmjzthpwrnfdokpfa.supabase.co
-SECRET_KEY=your-secret-key-here
-JWT_SECRET_KEY=your-jwt-secret-key-here
-FLASK_ENV=development
+DATABASE_URL=postgresql://postgres:password@db:5432/myapp
+JWT_SECRET_KEY=local-key
