Finalize email delivery with Mailgun, Redis and RQ worker

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 DATABASE_URL=postgresql://postgres:password@db:5432/myapp
 JWT_SECRET_KEY=local-key
+MAILGUN_API_KEY=your-mailgun-api-key
+MAILGUN_DOMAIN=your-mailgun-domain
+REDIS_URL=your-redis-url 
